# experiments

./: README.md
ai-agents/: README.md
ai-agents/00-basics/: chatbot.py
ai-agents/agent/: executor.py  main.py  planner.py  tools.py  utils.py
ai-agents/basic_agent/: executor.py  main.py  planner.py
ai-agents/llm/: structured_output.py
boids/: README.md  development.sh  meson.build
boids/src/: boid.hpp  config.hpp  main.cpp  rulemanager.hpp  rules.hpp
cpp-raytracer/: .gitignore  CMakeLists.txt  README.md
cpp-raytracer/extras/: Makefile  four_color_image.cpp  profile.sh
cpp-raytracer/src/: camera.cpp  camera.hpp  colors.hpp  commons.hpp  config.h  frombook.hpp  image.cpp  image.hpp  main.cpp  material.cpp  material.hpp  objects.cpp  objects.hpp  progressbar.hpp  raytracer.cpp  raytracer.hpp  scene.cpp  scene.hpp
datapacker/: Doxyfile  README.md  development.sh  meson.build  meson.options
datapacker/examples/: bmp_header_reader.cpp  packing_of_struct_bytes.cpp  packing_of_struct_stream.cpp
datapacker/include/: datapacker.h
datapacker/tests/: datapacker_test.cpp  meson.build
graphql-programs/graphql-query/: README.md  package-lock.json  package.json
graphql-programs/graphql-query/02-graphql-with-postgres/: index.js  malicious.gql
graphql-programs/graphql-query/03-data-loader/: db.js  index.js
graphql-programs/graphql-query/04-persisted-queries/: documents.js  index.js
graphql-query/: README.md  hello.js  package-lock.json  package.json  products.js  server.js
graphql-query/02-graphql-with-postgres/: db.js  index.js  seed.js
